[package]
name          = "id3-json"
version       = "0.2.1"
edition       = "2021"
authors       = ["Andrew Radev <andrew.radev@proton.me>"]
license       = "MIT"
description   = "Read and write ID3 tags in a machine-readable way"
readme        = "README.md"
repository    = "https://github.com/AndrewRadev/id3-image"
documentation = "https://docs.rs/id3-image/latest/id3_image"
keywords      = [ "id3", "mp3", "json" ]
categories    = [ "command-line-utilities", "filesystem" ]

[badges]
circle-ci = { repository = "AndrewRadev/id3-json" }

[dependencies]
anyhow     = "1.0.69"
id3        = "1.6.0"
lexopt     = "0.3.0"
serde_json = "1.0.94"

[dev-dependencies]
tempfile = "3.4.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
