[package]
name          = "id3-json"
version       = "0.3.0"
edition       = "2021"
authors       = ["Andrew Radev <andrew.radev@proton.me>"]
license       = "MIT"
description   = "Read and write ID3 tags in a machine-readable way"
readme        = "README.md"
repository    = "https://github.com/AndrewRadev/id3-image"
documentation = "https://docs.rs/id3-image/latest/id3_image"
keywords      = [ "id3", "mp3", "json" ]
categories    = [ "command-line-utilities", "filesystem" ]

[badges]
circle-ci = { repository = "AndrewRadev/id3-json" }

[dependencies]
anyhow     = "1.0.102"
id3        = "1.16.4"
lexopt     = "0.3.2"
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.27.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
