[package]
name          = "id3-json"
version       = "0.3.0"
edition       = "2021"
authors       = ["Andrew Radev <contact@andrewra.dev>"]
license       = "MIT"
description   = "Read and write ID3 tags in a machine-readable way"
readme        = "README.md"
repository    = "https://github.com/AndrewRadev/id3-json"
documentation = "https://docs.rs/id3-json/latest/id3_json"
keywords      = [ "id3", "mp3", "json" ]
categories    = [ "command-line-utilities", "filesystem" ]

[dependencies]
anyhow     = "1.0.102"
id3        = "1.16.4"
lexopt     = "0.3.2"
serde_json = "1.0.149"
base64     = "0.22.1"

[dev-dependencies]
tempfile = "3.27.0"
image    = "0.25.10"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
